--- a/index.html
+++ b/index.html
@@ -339,19 +339,19 @@
 
                     <ul class="footer__info-list">
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Tariflar</a>
+                            <a class="footer__info-link" href="#">Mobilset ilovasi</a>
                         </li>
 
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Xizmatlar</a>
-                        </li>
-
-                        <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Xizmat uchun to'lovlar</a>
+                            <a class="footer__info-link" href="#">To’lov tizimlari</a>
                         </li>
 
                         <li class="footer__info-element">
                             <a class="footer__info-link" href="#">Aksiyalar</a>
+                        </li>
+
+                        <li class="footer__info-element">
+                            <a class="footer__info-link" href="#">Qanday e’lon berish mumkin</a>
                         </li>
                     </ul>
                 </div>
@@ -362,19 +362,19 @@
 
                     <ul class="footer__info-list">
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Tariflar</a>
+                            <a class="footer__info-link" href="#">Kompaniya haqida</a>
                         </li>
 
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Xizmatlar</a>
+                            <a class="footer__info-link" href="#">Do’konlar</a>
                         </li>
 
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Xizmat uchun to'lovlar</a>
+                            <a class="footer__info-link" href="#">Bo’sh ish o’rinlari</a>
                         </li>
 
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Aksiyalar</a>
+                            <a class="footer__info-link" href="#">Kontaktlar</a>
                         </li>
                     </ul>
                 </div>
@@ -385,20 +385,14 @@
 
                     <ul class="footer__info-list">
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Tariflar</a>
+                            <a class="footer__info-call" href="tel:+998971200002">(+998 97) 120-00-02</a>
                         </li>
 
                         <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Xizmatlar</a>
+                            <a class="footer__info-address" href="#">100011, Toshkent sh. Shayxontohur tumani,
+                                Zarqaynar ko’chasi, 3B-uy</a>
                         </li>
-
-                        <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Xizmat uchun to'lovlar</a>
-                        </li>
-
-                        <li class="footer__info-element">
-                            <a class="footer__info-link" href="#">Aksiyalar</a>
-                        </li>
+                
                     </ul>
                 </div>
             </div>
