footer nearly finished

--- a/index.html
+++ b/index.html
@@ -396,6 +396,16 @@
                     </ul>
                 </div>
             </div>
+
+
+            div.footer__connect-wrapper
+            <form class="footer__language" action="https://google.com"">
+                <select class="footer__language-select" name="laguage">
+                    <option class="footer__language-option" value="uzbek">Uzbek</option>
+                    <option class="footer__language-option" value="english">English</option>
+                    <option class="footer__language-option" value="russian">Russian</option>
+                </select>
+            </form>
         </div>
     </footer>
 
