--- a/index.html
+++ b/index.html
@@ -397,15 +397,19 @@
                 </div>
             </div>
 
+            <div class="footer__wrapper1">
+                <div class="footer__connect-wrapper">
+                    <form class="footer__language" action="https://google.com"">
+                        <select class="footer__language-select" name="laguage">
+                            <option class="footer__language-option" value="uzbek">Uzbek</option>
+                            <option class="footer__language-option" value="english">English</option>
+                            <option class="footer__language-option" value="russian">Russian</option>
+                        </select>
+                    </form>
+                </div>
+            </div>
+            
 
-            div.footer__connect-wrapper
-            <form class="footer__language" action="https://google.com"">
-                <select class="footer__language-select" name="laguage">
-                    <option class="footer__language-option" value="uzbek">Uzbek</option>
-                    <option class="footer__language-option" value="english">English</option>
-                    <option class="footer__language-option" value="russian">Russian</option>
-                </select>
-            </form>
         </div>
     </footer>
 
